deployment/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coloring-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coloring
  template:
    metadata:
      labels:
        app: coloring
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: node-role.kubernetes.io/coloring
                  operator: In
                  values:
                  - 'true'
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "demo.local"
      containers:
      - name: coloring
        image: liuzhidocker/probe-demo:2.0.0
        securityContext:    
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        lifecycle:
          preStop:
            exec:
              command:
              - sh
              - /opt/app/shell/preStop.sh
        volumeMounts:
          - mountPath: /opt/logs
            name: host-path-logs
        ports:
          - containerPort: 8081
            name: liveness-port
      - name: sidecar
        image: liuzhidocker/proxy-traffic:1.0.0
        command: ["/app/proxy-traffic"]
        args: ["--url=host.docker.internal:3306","--name=traffic", "--ports=8085,9090"]
        ports:
          - containerPort: 8082
            name: http1
          - containerPort: 9090
            name: http2
        volumeMounts:
        - mountPath: /opt/logs
          name: host-path-logs
      volumes:
      - name: host-path-logs
        hostPath:
          path: /data/logs
          type: DirectoryOrCreate
