deployment/base/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
  - allowedRoutes:
      kinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
